<resources>
    <string name="app_name">Cowin AutoBook</string>
    <string name="pin_code">PIN Code</string>
    <string name="phone_number">Phone Number</string>
    <string name="save">Save</string>
    <string name="vaccine_icon">Vaccine icon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="otp">OTP</string>
    <string name="auth_token">Auth token</string>
    <string name="dose1">dose1</string>
    <string name="dose2">dose2</string>
    <string name="change">Change</string>
    <string name="benificiary">Benificiary</string>
    <string name="date">Date</string>
    <string name="name">Name</string>
    <string name="photo_id_number">Photo id number</string>
    <string name="book">Book</string>
    <string name="recaptcha">Recaptcha</string>
    <string name="refresh">Refresh</string>
</resources>