<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/home_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="25dp"
    app:cardElevation="5dp"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/card_background"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/vaccine_icon"
            app:srcCompat="@drawable/vaccine_img" />

        <EditText
            android:id="@+id/etPinCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/edit_text"
            android:hint="@string/pin_code"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="6"
            android:maxLines="1"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/edit_text"
            android:hint="@string/phone_number"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:maxLength="10"
            android:maxLines="1"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="22sp" />

        <RadioGroup
            android:id="@+id/rgDose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:gravity="center">
                <RadioButton
                    android:id="@+id/rbDose1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dose1"
                    android:checked="true"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:layout_marginHorizontal="15dp"/>

                <RadioButton
                    android:id="@+id/rbDose2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dose2"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:layout_marginHorizontal="15dp"/>
        </RadioGroup>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSave"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:background="@drawable/button"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>