<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="25dp"
    app:cardElevation="5dp"
    android:layout_margin="10dp"
    tools:context=".view.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/card_background">

        <TextView
            android:id="@+id/tvPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_marginVertical="10dp"
            android:textSize="26sp"
            android:text="@string/phone_number" />

        <TextView
            android:id="@+id/tvPinCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_marginVertical="10dp"
            android:textSize="26sp"
            android:text="@string/pin_code" />

        <EditText
            android:id="@+id/etOtp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text"
            android:layout_marginTop="30dp"
            android:hint="@string/otp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textColorHint="@color/white"
            android:layout_marginHorizontal="50dp"
            android:inputType="number"
            android:maxLines="1"
            android:maxLength="6"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:background="@drawable/button"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="45dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/login" />

    </LinearLayout>

</androidx.cardview.widget.CardView>