<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="25dp"
    app:cardElevation="5dp"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_blue"
        android:gravity="center"
        android:orientation="vertical">


        <CheckBox
            android:id="@+id/cbBenificiary"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="start"
            android:layout_marginStart="20dp"
            android:background="?android:attr/listChoiceIndicatorMultiple"
            android:button="@null"/>

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/tvBeneficiaryId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/benificiary"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvPhotoId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/photo_id_number"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>