<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="25dp"
    app:cardElevation="5dp"
    android:layout_margin="10dp"
    tools:context=".view.DashboardFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/card_background"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvPinCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:text="@string/pin_code"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:text="@string/date"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ListView
            android:id="@+id/lvBeneficiary"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:padding="20dp">

        </ListView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnChange"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/button"
            android:text="@string/change"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>