<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="25dp"
    app:cardElevation="5dp"
    android:layout_margin="10dp"
    tools:context=".view.RecaptchaFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/card_background">

        <ImageView
            android:id="@+id/ivRecaptcha"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:background="@color/white"
            android:layout_marginVertical="40dp"
            android:contentDescription="@string/recaptcha" />

        <EditText
            android:id="@+id/etOtp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text"
            android:hint="@string/recaptcha"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textColorHint="@color/white"
            android:layout_marginHorizontal="50dp"
            android:inputType="number"
            android:maxLines="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnBook"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/button"
            android:text="@string/book"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginHorizontal="15dp"/>

            <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRefresh"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/button"
            android:text="@string/refresh"
            android:textColor="@color/white"
            android:textSize="20sp"
                android:layout_marginHorizontal="15dp"/>
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>